--- a/газон-во-дворе-спортивная-10-12-14.md
+++ b/газон-во-дворе-спортивная-10-12-14.md
@@ -1,3 +1,12 @@
-50.565542, 36.550250
+геокоординаты: 50.565542, 36.550250
 
-https://www.google.ru/maps/place/50%C2%B033'56.0%22N+36%C2%B033'00.9%22E/@50.5659774,36.5508542,825m/data=!3m1!1e3!4m2!3m1!1s0x0:0x0?hl=ru
+[Ссылка на Google карту](https://www.google.ru/maps/place/50%C2%B033'56.0%22N+36%C2%B033'00.9%22E/@50.5659774,36.5508542,825m/data=!3m1!1e3!4m2!3m1!1s0x0:0x0?hl=ru)
+
+[Ссылка на альбом с фотографиями](http://imgur.com/a/qLdVW)
+
+![1](http://i.imgur.com/poHbXyC.jpg)
+![2](http://i.imgur.com/CMz22RD.jpg)
+![3](http://i.imgur.com/APXUpL3.jpg)
+![4](http://i.imgur.com/INqh5Zp.jpg)
+![5](http://i.imgur.com/7TDEvCh.jpg)
+![6](http://i.imgur.com/cOm17Sn.jpg)
