--- a/газон-во-дворе-спортивная-10-12-14.md
+++ b/газон-во-дворе-спортивная-10-12-14.md
@@ -1,9 +1,12 @@
-геокоординаты: 50.565542, 36.550250
+Ненадлежащее состояние элементов озеленения во внутреннем дворе на Спортивной, дом 14. Газон превращён в грязное месиво авто-свиньями. Фото и координаты места прилагаются ниже. Неодходимо поручить ответственной организации установить вокруг газона надёжные анти-автомобильные ограждения.
+
+геокоординаты места: 50.565542, 36.550250
 
 [Ссылка на Google карту](https://www.google.ru/maps/place/50%C2%B033'56.0%22N+36%C2%B033'00.9%22E/@50.5659774,36.5508542,825m/data=!3m1!1e3!4m2!3m1!1s0x0:0x0?hl=ru)
 
 [Ссылка на альбом с фотографиями](http://imgur.com/a/qLdVW)
 
+![0](http://i.imgur.com/u0MXhlL.png)
 ![1](http://i.imgur.com/poHbXyC.jpg)
 ![2](http://i.imgur.com/CMz22RD.jpg)
 ![3](http://i.imgur.com/APXUpL3.jpg)
