--- a/газон-во-дворе-спортивная-10-12-14.md
+++ b/газон-во-дворе-спортивная-10-12-14.md
@@ -4,12 +4,16 @@
 
 [Ссылка на Google карту](https://www.google.ru/maps/place/50%C2%B033'56.0%22N+36%C2%B033'00.9%22E/@50.5659774,36.5508542,825m/data=!3m1!1e3!4m2!3m1!1s0x0:0x0?hl=ru)
 
-[Ссылка на альбом с фотографиями](http://imgur.com/a/qLdVW)
+[Ссылка на альбом с фотографиями на imgur.com](http://imgur.com/a/qLdVW)
 
-![0](http://i.imgur.com/u0MXhlL.png)
+![быдло](http://i.imgur.com/SWlyOjT.jpg)
+![быдло](http://i.imgur.com/QNqjHpg.jpg)
+![быдло](http://i.imgur.com/rnr2ZhQ.jpg)
+![карта](http://i.imgur.com/u0MXhlL.png)
+![1](http://i.imgur.com/5rXbajv.jpg)
+![1](http://i.imgur.com/gL9S0O6.jpg)
+![1](http://i.imgur.com/wO3reJ0.jpg)
 ![1](http://i.imgur.com/poHbXyC.jpg)
-![2](http://i.imgur.com/CMz22RD.jpg)
-![3](http://i.imgur.com/APXUpL3.jpg)
-![4](http://i.imgur.com/INqh5Zp.jpg)
-![5](http://i.imgur.com/7TDEvCh.jpg)
-![6](http://i.imgur.com/cOm17Sn.jpg)
+![1](http://i.imgur.com/CMz22RD.jpg)
+![1](http://i.imgur.com/APXUpL3.jpg)
+
