--- a/газон-во-дворе-спортивная-10-12-14.md
+++ b/газон-во-дворе-спортивная-10-12-14.md
@@ -1,4 +1,4 @@
-Ненадлежащее состояние элементов озеленения во внутреннем дворе на Спортивной, дом 14. Газон превращён в грязное месиво авто-дегенератами. Фото и координаты места прилагаются ниже. Необходимо поручить ответственной организации установить вокруг газона надёжные анти-автомобильные ограждения.
+Владельцы автомобилей уничтожили газон внутри двора домов Спортивная 10, 12 и 14. Газон превращён в грязное месиво. Настоятельно прошу муниципальные власти обязать ответственную УК установить анти-автомобильные ограждения.
 
 геокоординаты места: 50.565542, 36.550250
 
