--- a/газон-во-дворе-спортивная-10-12-14.md
+++ b/газон-во-дворе-спортивная-10-12-14.md
@@ -1,4 +1,4 @@
-Владельцы автомобилей уничтожили газон внутри двора домов Спортивная 10, 12 и 14. Газон превращён в грязное месиво. Настоятельно прошу муниципальные власти обязать ответственную УК установить анти-автомобильные ограждения.
+Владельцы автомобилей уничтожили газон внутри двора домов Спортивная 10, 12 и 14. Газон превращён в грязное месиво. Прошу муниципальные власти обязать ответственную УК установить анти-автомобильные ограждения.
 
 геокоординаты места: 50.565542, 36.550250
 
