--- a/парковка-на-газоне-спортивная-12.md
+++ b/парковка-на-газоне-спортивная-12.md
@@ -6,4 +6,4 @@
 
 Фотографии сделаны 23 и 25 Февраля 2017 года.
 
-Необходимо защитить газон и тротуар столбиками против автомобилей. Ограду делать не надо, мы не кладбище. Достаточно столбиков. Резину не тяните, работайте. Штрафовать автосвиней или нет - на ваше усмотрение.
+Необходимо защитить газон и тротуар столбиками против автосвиней. Ограду делать не надо, мы не кладбище. Достаточно столбиков.
